Robledo_Miguel_prac1/build/parser.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement ENDLINE statement_list
    3               | statement

    4 statement: assignment
    5          | expression
    6          | statement COMMENT
    7          | ε

    8 assignment: ID ASSIGN expression

    9 expression: expr_arithmetic

   10 expr_arithmetic: expr_unary
   11                | expr_arithmetic PLUS expr_unary
   12                | expr_arithmetic MINUS expr_unary
   13                | expr_arithmetic OR expr_unary

   14 expr_unary: expr_term
   15           | PLUS expr_unary
   16           | MINUS expr_unary
   17           | expr_unary AND expr_term

   18 expr_term: expr_pow
   19          | expr_term MULT expr_pow
   20          | expr_term DIV expr_pow
   21          | expr_term MOD expr_pow
   22          | NOT expr_term

   23 expr_pow: factor
   24         | expr_pow POW factor
   25         | expr_pow GT factor
   26         | expr_pow LT factor
   27         | expr_pow GE factor
   28         | expr_pow LE factor
   29         | expr_pow EQ factor
   30         | expr_pow NE factor

   31 factor: ID
   32       | INTEGER
   33       | STRING
   34       | BOOLEAN
   35       | REAL
   36       | PI
   37       | E
   38       | LPAREN expression RPAREN
   39       | expr_trig
   40       | expr_len
   41       | expr_substr

   42 expr_trig: SIN LPAREN expression RPAREN
   43          | COS LPAREN expression RPAREN
   44          | TAN LPAREN expression RPAREN

   45 expr_len: LEN LPAREN STRING RPAREN
   46         | LEN LPAREN ID RPAREN

   47 expr_substr: SUBSTR LPAREN STRING COMMA expression COMMA expression RPAREN
   48            | SUBSTR LPAREN ID COMMA expression COMMA expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN <no_value> (258) 8
    ENDLINE <no_value> (259) 2
    INTEGER <integer> (260) 32
    ID <ident> (261) 8 31 46 48
    REAL <real> (262) 35
    STRING <string> (263) 33 45 47
    BOOLEAN <boolean> (264) 34
    COS (265) 43
    SIN (266) 42
    TAN (267) 44
    PLUS (268) 11 15
    MINUS (269) 12 16
    MULT (270) 19
    DIV (271) 20
    MOD (272) 21
    POW (273) 24
    GT (274) 25
    GE (275) 27
    LT (276) 26
    LE (277) 28
    EQ (278) 29
    NE (279) 30
    NOT (280) 22
    AND (281) 17
    OR (282) 13
    PI (283) 36
    E (284) 37
    LEN (285) 45 46
    SUBSTR (286) 47 48
    LPAREN (287) 38 42 43 44 45 46 47 48
    RPAREN (288) 38 42 43 44 45 46 47 48
    COMMA (289) 47 48
    COMMENT (290) 6


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program (37)
        on left: 1
        on right: 0
    statement_list (38)
        on left: 2 3
        on right: 1 2
    statement (39)
        on left: 4 5 6 7
        on right: 2 3 6
    assignment (40)
        on left: 8
        on right: 4
    expression <ident.id_val> (41)
        on left: 9
        on right: 5 8 38 42 43 44 47 48
    expr_arithmetic <ident.id_val> (42)
        on left: 10 11 12 13
        on right: 9 11 12 13
    expr_unary <ident.id_val> (43)
        on left: 14 15 16 17
        on right: 10 11 12 13 15 16 17
    expr_term <ident.id_val> (44)
        on left: 18 19 20 21 22
        on right: 14 17 19 20 21 22
    expr_pow <ident.id_val> (45)
        on left: 23 24 25 26 27 28 29 30
        on right: 18 19 20 21 24 25 26 27 28 29 30
    factor <ident.id_val> (46)
        on left: 31 32 33 34 35 36 37 38 39 40 41
        on right: 23 24 25 26 27 28 29 30
    expr_trig <ident.id_val> (47)
        on left: 42 43 44
        on right: 39
    expr_len <ident.id_val> (48)
        on left: 45 46
        on right: 40
    expr_substr <ident.id_val> (49)
        on left: 47 48
        on right: 41


State 0

    0 $accept: • program $end

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    $default  reduce using rule 7 (statement)

    program          go to state 17
    statement_list   go to state 18
    statement        go to state 19
    assignment       go to state 20
    expression       go to state 21
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 1

   32 factor: INTEGER •

    $default  reduce using rule 32 (factor)


State 2

    8 assignment: ID • ASSIGN expression
   31 factor: ID •

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 31 (factor)


State 3

   35 factor: REAL •

    $default  reduce using rule 35 (factor)


State 4

   33 factor: STRING •

    $default  reduce using rule 33 (factor)


State 5

   34 factor: BOOLEAN •

    $default  reduce using rule 34 (factor)


State 6

   43 expr_trig: COS • LPAREN expression RPAREN

    LPAREN  shift, and go to state 31


State 7

   42 expr_trig: SIN • LPAREN expression RPAREN

    LPAREN  shift, and go to state 32


State 8

   44 expr_trig: TAN • LPAREN expression RPAREN

    LPAREN  shift, and go to state 33


State 9

   15 expr_unary: PLUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 35
    expr_term    go to state 24
    expr_pow     go to state 25
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 10

   16 expr_unary: MINUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 36
    expr_term    go to state 24
    expr_pow     go to state 25
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 11

   22 expr_term: NOT • expr_term

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_term    go to state 37
    expr_pow     go to state 25
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 12

   36 factor: PI •

    $default  reduce using rule 36 (factor)


State 13

   37 factor: E •

    $default  reduce using rule 37 (factor)


State 14

   45 expr_len: LEN • LPAREN STRING RPAREN
   46         | LEN • LPAREN ID RPAREN

    LPAREN  shift, and go to state 38


State 15

   47 expr_substr: SUBSTR • LPAREN STRING COMMA expression COMMA expression RPAREN
   48            | SUBSTR • LPAREN ID COMMA expression COMMA expression RPAREN

    LPAREN  shift, and go to state 39


State 16

   38 factor: LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 40
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 17

    0 $accept: program • $end

    $end  shift, and go to state 41


State 18

    1 program: statement_list •

    $default  reduce using rule 1 (program)


State 19

    2 statement_list: statement • ENDLINE statement_list
    3               | statement •
    6 statement: statement • COMMENT

    ENDLINE  shift, and go to state 42
    COMMENT  shift, and go to state 43

    $default  reduce using rule 3 (statement_list)


State 20

    4 statement: assignment •

    $default  reduce using rule 4 (statement)


State 21

    5 statement: expression •

    $default  reduce using rule 5 (statement)


State 22

    9 expression: expr_arithmetic •
   11 expr_arithmetic: expr_arithmetic • PLUS expr_unary
   12                | expr_arithmetic • MINUS expr_unary
   13                | expr_arithmetic • OR expr_unary

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    OR     shift, and go to state 46

    $default  reduce using rule 9 (expression)


State 23

   10 expr_arithmetic: expr_unary •
   17 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 47

    $default  reduce using rule 10 (expr_arithmetic)


State 24

   14 expr_unary: expr_term •
   19 expr_term: expr_term • MULT expr_pow
   20          | expr_term • DIV expr_pow
   21          | expr_term • MOD expr_pow

    MULT  shift, and go to state 48
    DIV   shift, and go to state 49
    MOD   shift, and go to state 50

    $default  reduce using rule 14 (expr_unary)


State 25

   18 expr_term: expr_pow •
   24 expr_pow: expr_pow • POW factor
   25         | expr_pow • GT factor
   26         | expr_pow • LT factor
   27         | expr_pow • GE factor
   28         | expr_pow • LE factor
   29         | expr_pow • EQ factor
   30         | expr_pow • NE factor

    POW  shift, and go to state 51
    GT   shift, and go to state 52
    GE   shift, and go to state 53
    LT   shift, and go to state 54
    LE   shift, and go to state 55
    EQ   shift, and go to state 56
    NE   shift, and go to state 57

    $default  reduce using rule 18 (expr_term)


State 26

   23 expr_pow: factor •

    $default  reduce using rule 23 (expr_pow)


State 27

   39 factor: expr_trig •

    $default  reduce using rule 39 (factor)


State 28

   40 factor: expr_len •

    $default  reduce using rule 40 (factor)


State 29

   41 factor: expr_substr •

    $default  reduce using rule 41 (factor)


State 30

    8 assignment: ID ASSIGN • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 58
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 31

   43 expr_trig: COS LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 59
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 32

   42 expr_trig: SIN LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 60
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 33

   44 expr_trig: TAN LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 61
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 34

   31 factor: ID •

    $default  reduce using rule 31 (factor)


State 35

   15 expr_unary: PLUS expr_unary •
   17           | expr_unary • AND expr_term

    $default  reduce using rule 15 (expr_unary)


State 36

   16 expr_unary: MINUS expr_unary •
   17           | expr_unary • AND expr_term

    $default  reduce using rule 16 (expr_unary)


State 37

   19 expr_term: expr_term • MULT expr_pow
   20          | expr_term • DIV expr_pow
   21          | expr_term • MOD expr_pow
   22          | NOT expr_term •

    $default  reduce using rule 22 (expr_term)


State 38

   45 expr_len: LEN LPAREN • STRING RPAREN
   46         | LEN LPAREN • ID RPAREN

    ID      shift, and go to state 62
    STRING  shift, and go to state 63


State 39

   47 expr_substr: SUBSTR LPAREN • STRING COMMA expression COMMA expression RPAREN
   48            | SUBSTR LPAREN • ID COMMA expression COMMA expression RPAREN

    ID      shift, and go to state 64
    STRING  shift, and go to state 65


State 40

   38 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 66


State 41

    0 $accept: program $end •

    $default  accept


State 42

    2 statement_list: statement ENDLINE • statement_list

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    $default  reduce using rule 7 (statement)

    statement_list   go to state 67
    statement        go to state 19
    assignment       go to state 20
    expression       go to state 21
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 43

    6 statement: statement COMMENT •

    $default  reduce using rule 6 (statement)


State 44

   11 expr_arithmetic: expr_arithmetic PLUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 68
    expr_term    go to state 24
    expr_pow     go to state 25
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 45

   12 expr_arithmetic: expr_arithmetic MINUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 69
    expr_term    go to state 24
    expr_pow     go to state 25
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 46

   13 expr_arithmetic: expr_arithmetic OR • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 70
    expr_term    go to state 24
    expr_pow     go to state 25
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 47

   17 expr_unary: expr_unary AND • expr_term

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_term    go to state 71
    expr_pow     go to state 25
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 48

   19 expr_term: expr_term MULT • expr_pow

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_pow     go to state 72
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 49

   20 expr_term: expr_term DIV • expr_pow

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_pow     go to state 73
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 50

   21 expr_term: expr_term MOD • expr_pow

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_pow     go to state 74
    factor       go to state 26
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 51

   24 expr_pow: expr_pow POW • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 75
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 52

   25 expr_pow: expr_pow GT • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 76
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 53

   27 expr_pow: expr_pow GE • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 77
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 54

   26 expr_pow: expr_pow LT • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 78
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 55

   28 expr_pow: expr_pow LE • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 79
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 56

   29 expr_pow: expr_pow EQ • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 80
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 57

   30 expr_pow: expr_pow NE • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 81
    expr_trig    go to state 27
    expr_len     go to state 28
    expr_substr  go to state 29


State 58

    8 assignment: ID ASSIGN expression •

    $default  reduce using rule 8 (assignment)


State 59

   43 expr_trig: COS LPAREN expression • RPAREN

    RPAREN  shift, and go to state 82


State 60

   42 expr_trig: SIN LPAREN expression • RPAREN

    RPAREN  shift, and go to state 83


State 61

   44 expr_trig: TAN LPAREN expression • RPAREN

    RPAREN  shift, and go to state 84


State 62

   46 expr_len: LEN LPAREN ID • RPAREN

    RPAREN  shift, and go to state 85


State 63

   45 expr_len: LEN LPAREN STRING • RPAREN

    RPAREN  shift, and go to state 86


State 64

   48 expr_substr: SUBSTR LPAREN ID • COMMA expression COMMA expression RPAREN

    COMMA  shift, and go to state 87


State 65

   47 expr_substr: SUBSTR LPAREN STRING • COMMA expression COMMA expression RPAREN

    COMMA  shift, and go to state 88


State 66

   38 factor: LPAREN expression RPAREN •

    $default  reduce using rule 38 (factor)


State 67

    2 statement_list: statement ENDLINE statement_list •

    $default  reduce using rule 2 (statement_list)


State 68

   11 expr_arithmetic: expr_arithmetic PLUS expr_unary •
   17 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 47

    $default  reduce using rule 11 (expr_arithmetic)


State 69

   12 expr_arithmetic: expr_arithmetic MINUS expr_unary •
   17 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 47

    $default  reduce using rule 12 (expr_arithmetic)


State 70

   13 expr_arithmetic: expr_arithmetic OR expr_unary •
   17 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 47

    $default  reduce using rule 13 (expr_arithmetic)


State 71

   17 expr_unary: expr_unary AND expr_term •
   19 expr_term: expr_term • MULT expr_pow
   20          | expr_term • DIV expr_pow
   21          | expr_term • MOD expr_pow

    MULT  shift, and go to state 48
    DIV   shift, and go to state 49
    MOD   shift, and go to state 50

    $default  reduce using rule 17 (expr_unary)


State 72

   19 expr_term: expr_term MULT expr_pow •
   24 expr_pow: expr_pow • POW factor
   25         | expr_pow • GT factor
   26         | expr_pow • LT factor
   27         | expr_pow • GE factor
   28         | expr_pow • LE factor
   29         | expr_pow • EQ factor
   30         | expr_pow • NE factor

    POW  shift, and go to state 51
    GT   shift, and go to state 52
    GE   shift, and go to state 53
    LT   shift, and go to state 54
    LE   shift, and go to state 55
    EQ   shift, and go to state 56
    NE   shift, and go to state 57

    $default  reduce using rule 19 (expr_term)


State 73

   20 expr_term: expr_term DIV expr_pow •
   24 expr_pow: expr_pow • POW factor
   25         | expr_pow • GT factor
   26         | expr_pow • LT factor
   27         | expr_pow • GE factor
   28         | expr_pow • LE factor
   29         | expr_pow • EQ factor
   30         | expr_pow • NE factor

    POW  shift, and go to state 51
    GT   shift, and go to state 52
    GE   shift, and go to state 53
    LT   shift, and go to state 54
    LE   shift, and go to state 55
    EQ   shift, and go to state 56
    NE   shift, and go to state 57

    $default  reduce using rule 20 (expr_term)


State 74

   21 expr_term: expr_term MOD expr_pow •
   24 expr_pow: expr_pow • POW factor
   25         | expr_pow • GT factor
   26         | expr_pow • LT factor
   27         | expr_pow • GE factor
   28         | expr_pow • LE factor
   29         | expr_pow • EQ factor
   30         | expr_pow • NE factor

    POW  shift, and go to state 51
    GT   shift, and go to state 52
    GE   shift, and go to state 53
    LT   shift, and go to state 54
    LE   shift, and go to state 55
    EQ   shift, and go to state 56
    NE   shift, and go to state 57

    $default  reduce using rule 21 (expr_term)


State 75

   24 expr_pow: expr_pow POW factor •

    $default  reduce using rule 24 (expr_pow)


State 76

   25 expr_pow: expr_pow GT factor •

    $default  reduce using rule 25 (expr_pow)


State 77

   27 expr_pow: expr_pow GE factor •

    $default  reduce using rule 27 (expr_pow)


State 78

   26 expr_pow: expr_pow LT factor •

    $default  reduce using rule 26 (expr_pow)


State 79

   28 expr_pow: expr_pow LE factor •

    $default  reduce using rule 28 (expr_pow)


State 80

   29 expr_pow: expr_pow EQ factor •

    $default  reduce using rule 29 (expr_pow)


State 81

   30 expr_pow: expr_pow NE factor •

    $default  reduce using rule 30 (expr_pow)


State 82

   43 expr_trig: COS LPAREN expression RPAREN •

    $default  reduce using rule 43 (expr_trig)


State 83

   42 expr_trig: SIN LPAREN expression RPAREN •

    $default  reduce using rule 42 (expr_trig)


State 84

   44 expr_trig: TAN LPAREN expression RPAREN •

    $default  reduce using rule 44 (expr_trig)


State 85

   46 expr_len: LEN LPAREN ID RPAREN •

    $default  reduce using rule 46 (expr_len)


State 86

   45 expr_len: LEN LPAREN STRING RPAREN •

    $default  reduce using rule 45 (expr_len)


State 87

   48 expr_substr: SUBSTR LPAREN ID COMMA • expression COMMA expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 34
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 89
    expr_arithmetic  go to state 22
    expr_unary       go to state 23
    expr_term        go to state 24
    expr_pow         go to state 25
    factor           go to state 26
    expr_trig        go to state 27
    expr_len         go to state 28
    expr_substr      go to state 29


State 88

   47 expr_substr: SUBSTR LPAREN STRING COMMA • expression COMMA expression RPAREN
